# windows_pathlib

./: .gitignore  README.md  pyproject.toml  sample.py  setup.py
windows_pathlib/: __init__.py  main.py
